[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A sample Python project"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.2.0", "black>=23.0"]
